feat: add fonction for display the inforamtion the emp and design

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <main class="flex w-auto p-3">
+    <main class="flex w-auto p-3 ">
         <div class="grid w-auto p-3">
             <aside
                 class="flex flex-col gap-3 border border-gray-300 rounded-xl p-4 items-center shadow-sm hover:border-gray-500 hover:shadow-md ">
@@ -193,6 +193,70 @@
                         <button data-modal-hide="ajouterEmploye" type="button"
                             class="text-body bg-neutral-secondary-medium box-border border border-default-medium hover:bg-neutral-tertiary-medium hover:text-heading focus:ring-4 focus:ring-neutral-tertiary shadow-xs font-medium leading-5 rounded-base text-sm px-4 py-2.5 focus:outline-none">Cancel</button>
                     </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- modal d'iformation d'employe -->
+        <div id="informationEmp" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-between  w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+
+                <div class="relative bg-white border border-default rounded-base shadow-sm p-4 md:p-6">
+
+                    <div class="flex items-center justify-between border-b border-default pb-4 md:pb-5">
+                        <h3 class="text-lg font-medium text-heading">
+                            Information d'employe
+                        </h3>
+                        <button type="button"
+                            class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center"
+                            data-modal-hide="informationEmp">
+                            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                                height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                    </div>
+
+                    <div class="space-y-6 p-5 rounded-xl bg-white shadow-sm">
+                        <div class="flex items-center gap-4">
+                            <div id="image" class="w-24 h-24 rounded-xl overflow-hidden bg-gray-100 border"></div>
+
+                            <div class="flex flex-col">
+                                <div id="nomEmp" class="text-xl font-semibold text-gray-900"></div>
+                                <div id="roleEmp" class="text-sm text-gray-500"></div>
+                            </div>
+                        </div>
+                        <div class="space-y-4">
+
+                            <div class="flex flex-col gap-1">
+                                <label class="text-xs text-gray-500">Email</label>
+                                <div id="emailEmp" class="text-sm text-gray-800 p-3 bg-gray-50 rounded-lg border"></div>
+                            </div>
+
+                            <div class="flex flex-col gap-1">
+                                <label class="text-xs text-gray-500">Téléphone</label>
+                                <div id="telephoneEmp" class="text-sm text-gray-800 p-3 bg-gray-50 rounded-lg border">
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="space-y-2">
+                            <p class="text-sm font-medium text-gray-700">Expériences</p>
+
+                            <div id="experiencesPlus" class="grid gap-3">
+
+                                
+
+                            </div>
+                        </div>
+
+                    </div>
+
+
 
                 </div>
             </div>
