feat: add fonction for the emp each salle

--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
                     <div
                         class="flex flex-col border-black border-8  block w-[350px] h-[350px] justify-center items-center">
                         <h1>Salle de conférence</h1>
-                        <button class="text-blue-600 text-6xl">+</button>
+                        <button id="conference" data-modal-target="listeConference" data-modal-toggle="listeConference"
+                            class="text-blue-600 text-6xl">+</button>
                     </div>
                     <div
-                        class="flex flex-col border-black border-8 block w-[350px] h-[380px] justify-center items-center">
+                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 block w-[350px] h-[380px] justify-center items-center">
                         <h1>Réception</h1>
-                        <button class="text-blue-600 text-6xl">+</button>
+                        <button id="reception" data-modal-target="listeReception" data-modal-toggle="listeReception"
+                            class="text-blue-600 text-6xl">+</button>
                     </div>
 
 
@@ -48,33 +50,36 @@
 
                 <div>
                     <div
-                        class="flex flex-col border-black border-8 block w-[300px] h-[300px] justify-center items-center">
+                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 block w-[300px] h-[300px] justify-center items-center">
                         <h1>Salle des serveurs</h1>
-                        <button class="text-blue-600 text-6xl">+</button>
+                        <button data-modal-target="listeIT" data-modal-toggle="listeIT"
+                            class="text-blue-600 text-6xl">+</button>
                     </div>
                     <div class="block h-32">
 
                     </div>
                     <div
                         class="flex flex-col border-black border-8 block w-[300px] h-[300px] justify-center items-center ">
-                        <h1>Salle de sécurité</h1>
-                        <button class="text-blue-600 text-6xl">+</button>
+                        <h1>Salle du personnel</h1>
+                        <button data-modal-target="listePersonne" data-modal-toggle="listePersonne"
+                            class="text-blue-600 text-6xl">+</button>
                     </div>
 
                 </div>
                 <div>
                     <div
-                        class="flex flex-col border-black border-8 block w-[300px] h-[300px] justify-center items-center">
-                        <h1>Salle du personnel</h1>
-                        <button class="text-blue-600 text-6xl">+</button>
+                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 block w-[300px] h-[300px] justify-center items-center">
+                        <h1>Salle de sécurité</h1>
+                        <button data-modal-target="listeSecurite" data-modal-toggle="listeSecurite"
+                            class="text-blue-600 text-6xl">+</button>
                     </div>
                     <div class="block h-32">
 
                     </div>
                     <div
-                        class="flex flex-col border-black border-8 block w-[300px] h-[300px] justify-center items-center">
+                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 block w-[300px] h-[300px] justify-center items-center">
                         <h1>Salle d’archives</h1>
-                        <button class="text-blue-600 text-6xl">+</button>
+                        <button data-modal-target="listeArchive" data-modal-toggle="listeArchive" class="text-blue-600 text-6xl">+</button>
                     </div>
                 </div>
             </div>
@@ -249,10 +254,212 @@
 
                             <div id="experiencesPlus" class="grid gap-3">
 
-                                
+
 
                             </div>
                         </div>
+
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+
+        <!-- modal liste conference -->
+        <div id="listeConference" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center  w-full md:inset-0 max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+
+                <div class="relative bg-white border border-default rounded-base shadow-sm p-4 md:p-6">
+
+                    <div class="flex items-center justify-between border-b border-default pb-4 md:pb-5">
+
+                        <button type="button"
+                            class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center"
+                            data-modal-hide="listeConference">
+                            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                                height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                    </div>
+
+                    <div class="space-y-6 p-5 rounded-xl bg-white shadow-sm">
+                        <ul id="ulConference" class="flex flex-col gap-3 justify-center items-center">
+
+                        </ul>
+
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+        <!-- modal liste IT -->
+        <div id="listeIT" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center  w-full md:inset-0 max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+
+                <div class="relative bg-white border border-default rounded-base shadow-sm p-4 md:p-6">
+
+                    <div class="flex items-center justify-between border-b border-default pb-4 md:pb-5">
+
+                        <button type="button"
+                            class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center"
+                            data-modal-hide="listeIT">
+                            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                                height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                    </div>
+
+                    <div class="space-y-6 p-5 rounded-xl bg-white shadow-sm">
+                        <ul id="ulIT" class="flex flex-col gap-3 justify-center items-center">
+
+                        </ul>
+
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+
+        <!-- modal reception -->
+        <div id="listeReception" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center  w-full md:inset-0 max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+
+                <div class="relative bg-white border border-default rounded-base shadow-sm p-4 md:p-6">
+
+                    <div class="flex items-center justify-between border-b border-default pb-4 md:pb-5">
+
+                        <button type="button"
+                            class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center"
+                            data-modal-hide="listeReception">
+                            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                                height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                    </div>
+
+                    <div class="space-y-6 p-5 rounded-xl bg-white shadow-sm">
+                        <ul id="ulReception" class="flex flex-col gap-3 justify-center items-center">
+
+                        </ul>
+
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+        <!-- maodal Personnes -->
+        <div id="listePersonne" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center  w-full md:inset-0 max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+
+                <div class="relative bg-white border border-default rounded-base shadow-sm p-4 md:p-6">
+
+                    <div class="flex items-center justify-between border-b border-default pb-4 md:pb-5">
+
+                        <button type="button"
+                            class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center"
+                            data-modal-hide="listePersonne">
+                            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                                height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                    </div>
+
+                    <div class="space-y-6 p-5 rounded-xl bg-white shadow-sm">
+                        <ul id="ulPersonne" class="flex flex-col gap-3 justify-center items-center">
+
+                        </ul>
+
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+
+        <!-- maodal securite -->
+        <div id="listeSecurite" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center  w-full md:inset-0 max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+
+                <div class="relative bg-white border border-default rounded-base shadow-sm p-4 md:p-6">
+
+                    <div class="flex items-center justify-between border-b border-default pb-4 md:pb-5">
+
+                        <button type="button"
+                            class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center"
+                            data-modal-hide="listeSecurite">
+                            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                                height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                    </div>
+
+                    <div class="space-y-6 p-5 rounded-xl bg-white shadow-sm">
+                        <ul id="ulSecurite" class="flex flex-col gap-3 justify-center items-center">
+
+                        </ul>
+
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+
+        <!-- maodal archive -->
+        <div id="listeArchive" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center  w-full md:inset-0 max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+
+                <div class="relative bg-white border border-default rounded-base shadow-sm p-4 md:p-6">
+
+                    <div class="flex items-center justify-between border-b border-default pb-4 md:pb-5">
+
+                        <button type="button"
+                            class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center"
+                            data-modal-hide="listeArchive">
+                            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                                height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                    </div>
+
+                    <div class="space-y-6 p-5 rounded-xl bg-white shadow-sm">
+                        <ul id="ulArchive" class="flex flex-col gap-3 justify-center items-center">
+
+                        </ul>
 
                     </div>
 
