--- a/index.html
+++ b/index.html
@@ -12,31 +12,33 @@
 
 <body>
 
-    <main class="flex w-auto p-3 ">
+    <main class="flex flex-col md:flex-row w-full p-3 gap-4">
         <div class="grid w-auto p-3">
             <aside
-                class="flex flex-col gap-3 border border-gray-300 rounded-xl p-4 items-center shadow-sm hover:border-gray-500 hover:shadow-md ">
+                class="flex flex-col gap-3 border border-gray-300 rounded-xl p-4 items-center shadow-sm hover:border-gray-500 hover:shadow-md w-full md:w-80 max-h-[80vh] ">
                 <ul id="listeEmployes" class="grid grid-cols gap-3">
                 </ul>
                 <div class="mt-auto relative">
                     <button data-modal-target="ajouterEmploye" data-modal-toggle="ajouterEmploye"
-                        class=" bg-blue-600 border-2 rounded-xl w-64 h-16" type="button">Ajouter un nouvel
+                        class=" bg-blue-600 text-white border-2 rounded-xl w-full md:w-64 h-14 text-lg active:scale-95" type="button">Ajouter un nouvel
                         employé</button>
                 </div>
             </aside>
         </div>
-        <div class="flex bg-white w-full justify-center items-center">
+        <div class="flex w-full justify-center items-center overflow-x-auto md:overflow-visible">
             <div id="etage"
-                class="flex p-3 border-8 border-black rounded-xl p-4 items-center shadow-sm hover:border-gray-500 hover:shadow-md">
+                class="grid grid-cols-1 md:flex gap-6 p-4 border-8 border-black rounded-xl shadow-sm hover:border-gray-500 hover:shadow-md min-w-[380px] md:min-w-0">
                 <div>
                     <div
-                        class="flex flex-col border-black border-8  block w-[350px] h-[350px] justify-center items-center">
+                        class="flex flex-col border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[360px] text-center">
                         <h1>Salle de conférence</h1>
                         <button id="conference" data-modal-target="listeConference" data-modal-toggle="listeConference"
                             class="text-blue-600 text-6xl">+</button>
                     </div>
+                    
                     <div
-                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 block w-[350px] h-[380px] justify-center items-center">
+                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[370px] text-center">
+                        
                         <h1>Réception</h1>
                         <button id="reception" data-modal-target="listeReception" data-modal-toggle="listeReception"
                             class="text-blue-600 text-6xl">+</button>
@@ -50,7 +52,7 @@
 
                 <div>
                     <div
-                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 block w-[300px] h-[300px] justify-center items-center">
+                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center">
                         <h1>Salle des serveurs</h1>
                         <button data-modal-target="listeIT" data-modal-toggle="listeIT"
                             class="text-blue-600 text-6xl">+</button>
@@ -59,7 +61,7 @@
 
                     </div>
                     <div
-                        class="flex flex-col border-black border-8 block w-[300px] h-[300px] justify-center items-center ">
+                        class="flex flex-col border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center ">
                         <h1>Salle du personnel</h1>
                         <button data-modal-target="listePersonne" data-modal-toggle="listePersonne"
                             class="text-blue-600 text-6xl">+</button>
@@ -68,7 +70,7 @@
                 </div>
                 <div>
                     <div
-                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 block w-[300px] h-[300px] justify-center items-center">
+                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center">
                         <h1>Salle de sécurité</h1>
                         <button data-modal-target="listeSecurite" data-modal-toggle="listeSecurite"
                             class="text-blue-600 text-6xl">+</button>
@@ -77,7 +79,7 @@
 
                     </div>
                     <div
-                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 block w-[300px] h-[300px] justify-center items-center">
+                        class="fflex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center">
                         <h1>Salle d’archives</h1>
                         <button data-modal-target="listeArchive" data-modal-toggle="listeArchive" class="text-blue-600 text-6xl">+</button>
                     </div>
