--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                         <h1>Salle de conférence</h1>
                         <button id="conference" data-modal-target="listeConference" data-modal-toggle="listeConference"
                             class="text-blue-600 text-6xl">+</button>
+                        <ul id="assignedConference">
+
+                        </ul>
                     </div>
                     
                     <div
@@ -42,6 +45,9 @@
                         <h1>Réception</h1>
                         <button id="reception" data-modal-target="listeReception" data-modal-toggle="listeReception"
                             class="text-blue-600 text-6xl">+</button>
+                        <ul id="assignedReception">
+
+                        </ul>
                     </div>
 
 
@@ -56,6 +62,9 @@
                         <h1>Salle des serveurs</h1>
                         <button data-modal-target="listeIT" data-modal-toggle="listeIT"
                             class="text-blue-600 text-6xl">+</button>
+                        <ul id="assignedServeur">
+
+                        </ul>
                     </div>
                     <div class="block h-32">
 
@@ -65,6 +74,9 @@
                         <h1>Salle du personnel</h1>
                         <button data-modal-target="listePersonne" data-modal-toggle="listePersonne"
                             class="text-blue-600 text-6xl">+</button>
+                        <ul id="assignedPersonne">
+
+                        </ul>
                     </div>
 
                 </div>
@@ -74,6 +86,9 @@
                         <h1>Salle de sécurité</h1>
                         <button data-modal-target="listeSecurite" data-modal-toggle="listeSecurite"
                             class="text-blue-600 text-6xl">+</button>
+                        <ul id="assignedSecurite">
+
+                        </ul>
                     </div>
                     <div class="block h-32">
 
@@ -82,6 +97,9 @@
                         class="fflex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center">
                         <h1>Salle d’archives</h1>
                         <button data-modal-target="listeArchive" data-modal-toggle="listeArchive" class="text-blue-600 text-6xl">+</button>
+                        <ul id="assignedArchive">
+
+                        </ul>
                     </div>
                 </div>
             </div>
