--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 </ul>
                 <div class="mt-auto relative">
                     <button data-modal-target="ajouterEmploye" data-modal-toggle="ajouterEmploye"
-                        class=" bg-blue-600 text-white border-2 rounded-xl w-full md:w-64 h-14 text-lg active:scale-95" type="button">Ajouter un nouvel
+                        class=" bg-blue-600 text-white border-2 rounded-xl w-full md:w-64 h-14 text-lg active:scale-95"
+                        type="button">Ajouter un nouvel
                         employé</button>
                 </div>
             </aside>
@@ -29,7 +30,7 @@
             <div id="etage"
                 class="grid grid-cols-1 md:flex gap-6 p-4 border-8 border-black rounded-xl shadow-sm hover:border-gray-500 hover:shadow-md min-w-[380px] md:min-w-0">
                 <div>
-                    <div
+                    <div id="salleConference"
                         class="flex flex-col border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[360px] text-center">
                         <h1>Salle de conférence</h1>
                         <button id="conference" data-modal-target="listeConference" data-modal-toggle="listeConference"
@@ -38,10 +39,10 @@
 
                         </ul>
                     </div>
-                    
-                    <div
+
+                    <div id="salleReception"
                         class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[370px] text-center">
-                        
+
                         <h1>Réception</h1>
                         <button id="reception" data-modal-target="listeReception" data-modal-toggle="listeReception"
                             class="text-blue-600 text-6xl">+</button>
@@ -57,7 +58,7 @@
                 </div>
 
                 <div>
-                    <div
+                    <div id="salleServeurs"
                         class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center">
                         <h1>Salle des serveurs</h1>
                         <button data-modal-target="listeIT" data-modal-toggle="listeIT"
@@ -69,7 +70,7 @@
                     <div class="block h-32">
 
                     </div>
-                    <div
+                    <div id="sallePersonne"
                         class="flex flex-col border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center ">
                         <h1>Salle du personnel</h1>
                         <button data-modal-target="listePersonne" data-modal-toggle="listePersonne"
@@ -81,7 +82,7 @@
 
                 </div>
                 <div>
-                    <div
+                    <div id="salleSecurite"
                         class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center">
                         <h1>Salle de sécurité</h1>
                         <button data-modal-target="listeSecurite" data-modal-toggle="listeSecurite"
@@ -93,10 +94,11 @@
                     <div class="block h-32">
 
                     </div>
-                    <div
+                    <div id="salleArchive"
                         class="fflex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center">
                         <h1>Salle d’archives</h1>
-                        <button data-modal-target="listeArchive" data-modal-toggle="listeArchive" class="text-blue-600 text-6xl">+</button>
+                        <button data-modal-target="listeArchive" data-modal-toggle="listeArchive"
+                            class="text-blue-600 text-6xl">+</button>
                         <ul id="assignedArchive">
 
                         </ul>
@@ -104,7 +106,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- modal ajouter -->
         <div id="ajouterEmploye" tabindex="-1" aria-hidden="true"
             class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-between items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
             <div class="relative p-4 w-full max-w-md max-h-full">
@@ -125,7 +127,7 @@
                             <span class="sr-only">Close modal</span>
                         </button>
                     </div>
-                    <!-- Modal body -->
+
                     <div class="grid gap-4 grid-cols-2 py-4 md:py-6 h-[50vh] overflow-y-auto">
                         <div class="col-span-2">
                             <label for="nom" class="block mb-2.5 text-sm font-medium text-heading">Nom</label>
@@ -134,10 +136,16 @@
                                 placeholder="Entrez le Nom complete" required>
                         </div>
                         <div class="col-span-2 ">
-                            <label for="role" class="block mb-2.5 text-sm font-medium text-heading">Rôle</label>
-                            <input type="text" name="role" id="role"
-                                class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body"
-                                placeholder="Ex: Techniciens IT" required>
+                            <label for="role" class="block mb-2.5 text-sm font-medium text-heading"> Sélectionnez le Rôle</label>
+                                <select id="role"
+                                    class="block w-full px-3 py-2.5 bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand shadow-xs placeholder:text-body">
+                                    <option selected>----Rôle-----</option>
+                                    <option value="Techniciens It">Techniciens It</option>
+                                    <option value="manager">manager</option>
+                                    <option value="Nettoyage">Nettoyage</option>
+                                    <option value="Sécurité">Sécurité</option>
+                                    <option value="Réception">Réception</option>
+                                </select>
                         </div>
                         <div class="col-span-2">
                             <label for="photo" class="block mb-2.5 text-sm font-medium text-heading">Photo</label>
