feat: update the function display the information the worker

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>WorkSphere - Virtual Workspace</title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/flowbite@latest/dist/flowbite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 </head>
 
 <body>
@@ -233,7 +233,7 @@
 
         <!-- modal d'iformation d'employe -->
         <div id="informationEmp" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-between  w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center  w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
             <div class="relative p-4 w-full max-w-2xl max-h-full">
 
                 <div class="relative bg-white border border-default rounded-base shadow-sm p-4 md:p-6">
