feat: add the validation for the input

--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
                                 </select>
                         </div>
                         <div class="col-span-2">
+                            <div>
+                                <img id="photoPersonnelle" class="border-2 rounded-xl w-32 h-32" src="" alt="photoPersonnelle">
+                                
+                            </div>
                             <label for="photo" class="block mb-2.5 text-sm font-medium text-heading">Photo</label>
 
                             <input type="url" name="photo" id="photo"
@@ -164,7 +168,7 @@
                         <div class="col-span-2 ">
                             <label for="telephone"
                                 class="block mb-2.5 text-sm font-medium text-heading">Téléphone</label>
-                            <input type="email" name="telephone" id="telephone"
+                            <input type="number" name="telephone" id="telephone"
                                 class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body"
                                 placeholder="Entrez le numero Téléphone" required>
                         </div>
