feat: update formulaire the ajouter

--- a/index.html
+++ b/index.html
@@ -192,16 +192,14 @@
                                         placeholder="Entrez le Nom de l'entreprise" required>
                                 </div>
                                 <div class="col-span-2 md:col-span-1">
-                                    <label for="DateDebut" class="block mb-2.5 text-sm font-medium text-heading">Date
-                                        debut</label>
-                                    <input type="date" name="DateDebut" id="DateDebut"
+                                    <label for="DateFin" class="block mb-2.5 text-sm font-medium text-heading">Date Fin</label>
+                                    <input type="date" name="DateFin" id="DateFin"
                                         class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body"
-                                        placeholder="07/06/1990" required>
+                                        required>
                                 </div>
                                 <div class="col-span-2 md:col-span-1">
-                                    <label for="DateFin" class="block mb-2.5 text-sm font-medium text-heading">Date
-                                        fin</label>
-                                    <input type="date" name="DateFin" id="DateFin"
+                                    <label for="DateDebut" class="block mb-2.5 text-sm font-medium text-heading">Date debut</label>
+                                    <input type="date" name="DateDebut" id="DateDebut"
                                         class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body"
                                         required>
                                 </div>
